--- a/dat/doomfiles/README
+++ b/dat/doomfiles/README
@@ -4,5 +4,8 @@ Contains some html files from
 
   http://obsidianrook.com/doomfiles
 
-raku-study/bin/2021mar28/doomfiles_browse_sequence-ii.raku
-raku-study/bin/2021mar28/doomfiles_browse_sequence-iii.raku
+Which scripts such as these try to parse:
+
+  raku-study/bin/2021mar28/doomfiles_browse_sequence-ii.raku
+  raku-study/bin/2021mar28/doomfiles_browse_sequence-iii.raku
+
