--- a/dat/doomfiles/README
+++ b/dat/doomfiles/README
@@ -4,7 +4,7 @@ Contains some html files from
 
   http://obsidianrook.com/doomfiles
 
-Which scripts such as these try to parse:
+Scripts such as these use these as raw material to try to parse:
 
   raku-study/bin/2021mar28/doomfiles_browse_sequence-ii.raku
   raku-study/bin/2021mar28/doomfiles_browse_sequence-iii.raku
