--- a/dat/doomfiles/README
+++ b/dat/doomfiles/README
@@ -4,6 +4,9 @@ Contains some html files from
 
   http://obsidianrook.com/doomfiles
 
+And these are Copyright Joseph Brenner, I guess-- but permission
+granted to distribute copies of these files with the raku-study code:
+
 Scripts such as these use these as raw material to try to parse:
 
   raku-study/bin/2021mar28/doomfiles_browse_sequence-ii.raku
