--- a/dat/doomfiles/README
+++ b/dat/doomfiles/README
@@ -5,7 +5,7 @@ Contains some html files from
   http://obsidianrook.com/doomfiles
 
 And these are Copyright Joseph Brenner, I guess-- but permission
-granted to distribute copies of these files with the raku-study code:
+is granted to distribute copies of these files with the raku-study code:
 
 Scripts such as these use these as raw material to try to parse:
 
