--- a/notes/meeting_2021mar28.org
+++ b/notes/meeting_2021mar28.org
@@ -32,15 +32,14 @@ https://github.com/doomvox/raku-study/blob/main/bin/2021mar28/doomfiles_browse_s
 By re-writing "stuff" so that it will only backtrack when it hits a bracket, 
 I expect more speed-memory gains.
 #+BEGIN_SRC perl6-mode
-    regex stuff
-    { (  # capture stuff (positional capture might not be needed)
-        [               # Stuff is a group of either
-            \<          # a left-bracket decision point
-          ||            # or
-            <-[ \< ]>+: # a ratcheting string of non-decision points
-        ]*              # 0-many of those. Greedy or non-greedy both work?
-    ) }  # end capture, end regex
-
+    regex stuff 
+    {
+        [            # stuff is a group of either
+            <-[-]>+: # a ratcheting string of non-decision points. Removing ratcheting makes it hang on Yary's system.
+          ||         # or
+            '-'      # a "dash" decision point
+        ]*           # 0-many of those. Greedy or non-greedy both work, about the same speed.
+    }  # end regex
 #+END_SRC
 ********** I think instead of this:
 #            <-[ \< ]>+:  #   a ratcheting string of non-decision points
