--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -2,4 +2,4 @@
 ** rough plan
 *** ask about questions, ideas, discussion topics
 *** recap of grammar to parse doomfiles: yary hluchan's approach, "decision points"
-*** 
+*** stackoverflow question by william michels "dualvars"
