--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -15,3 +15,9 @@ http://www.quotationspage.com/quote/24934.html
 ** future topics: 
 *** mixins mixed up:
 https://github.com/rakudo/rakudo/issues/4282
+
+
+brian d foy talk, preparing for perl 7
+https://www.youtube.com/channel/UCqMg7ia28fvx6iN08QR_-ig
+
+https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)
