--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -28,3 +28,9 @@ https://metacpan.org/pod/Filesys::ZFS
 perl5 params::validate
 https://metacpan.org/pod/Params::Validate
 https://metacpan.org/pod/Data::Validation
+
+apple considered adopting zfs
+
+https://appleinsider.com/articles/07/06/06/apple_to_adopt_zfs_as_default_file_system_for_leopard
+https://www.macworld.com/article/1058320/zfs.html
+https://arstechnica.com/gadgets/2016/06/zfs-the-other-new-apple-file-system-that-almost-was-until-it-wasnt/
