--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -44,3 +44,9 @@ https://docs.raku.org/language/regexes#Backtracking
 
 {} is here:
 https://docs.raku.org/language/regexes#Capture_numbers
+
+https://nakedsecurity.sophos.com/2021/03/17/serious-security-the-linux-kernel-bugs-that-surfaced-after-15-years/
+CVE-2021-27365. Exploitable heap buffer overflow due to the use of sprintf().
+However, sprintf() is always dangerous and should never be used, because it doesn’t check if there’s enough space in the final memory block for the printed data to fit.
+ ...
+Modern code shouldn’t use C functions that can perform memory copies of unlimited length – use snprintf(), which means format and print at most N bytes into string, and its friends instead.
