--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -18,6 +18,7 @@ http://www.quotationspage.com/quote/24934.html
 *** mixins mixed up:
 https://github.com/rakudo/rakudo/issues/4282
 
+** things discussed
 
 brian d foy talk, preparing for perl 7
 https://www.youtube.com/channel/UCqMg7ia28fvx6iN08QR_-ig
