--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -30,8 +30,7 @@ https://docs.raku.org/language/regexes#Backtracking
 ***** {} to "publish"
 https://docs.raku.org/language/regexes#Capture_numbers
 
-
-brian d foy talk, preparing for perl 7
+**** oslo perl brian d foy talk, preparing for perl 7
 https://www.youtube.com/channel/UCqMg7ia28fvx6iN08QR_-ig
 
 https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)
