--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -37,11 +37,6 @@ https://www.youtube.com/channel/UCqMg7ia28fvx6iN08QR_-ig
 **** beam the erlang vm
 https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)
 
-
-perl5 params::validate
-https://metacpan.org/pod/Params::Validate
-https://metacpan.org/pod/Data::Validation
-
 *** zfs
 **** apple considered adopting zfs
 https://appleinsider.com/articles/07/06/06/apple_to_adopt_zfs_as_default_file_system_for_leopard
@@ -52,7 +47,9 @@ https://arstechnica.com/gadgets/2016/06/zfs-the-other-new-apple-file-system-that
 https://metacpan.org/pod/Filesys::ZFS
 
 
-
+*** parameter validation in perl5
+https://metacpan.org/pod/Params::Validate
+https://metacpan.org/pod/Data::Validation
 
 https://nakedsecurity.sophos.com/2021/03/17/serious-security-the-linux-kernel-bugs-that-surfaced-after-15-years/
 CVE-2021-27365. Exploitable heap buffer overflow due to the use of sprintf().
