--- a/notes/meeting_2021apr11.org
+++ b/notes/meeting_2021apr11.org
@@ -58,12 +58,13 @@ https://nakedsecurity.sophos.com/2021/03/17/serious-security-the-linux-kernel-bu
 CVE-2021-27365. Exploitable heap buffer overflow due to the use of sprintf().
 
 However, sprintf() is always dangerous and should never be used,
- because it doesn’t check if there’s enough space in the final
- memory block for the printed data to fit.  ...  Modern code
- shouldn’t use C functions that can perform memory copies of
- unlimited length – use snprintf(), which means format and print
- at most N bytes into string, and its friends instead.
+because it doesn’t check if there’s enough space in the final
+memory block for the printed data to fit.  ...  Modern code
+shouldn’t use C functions that can perform memory copies of
+unlimited length – use snprintf(), which means format and print
+at most N bytes into string, and its friends instead.
 
+*** sprintf in raku has little to do with the C version.
 
 https://github.com/rakudo/rakudo/search?p=5&q=sprintf
 https://github.com/rakudo/rakudo/search?q=sprintf
@@ -134,3 +135,4 @@ Bill_Michels : "Far More Than Everything You've Ever Wanted to Know about
 Prototypes in Perl" by Tom Christiansen 
 
 Bruce Gray : https://stackoverflow.com/questions/67030459/what-persistent-data-structures-does-raku-rakudo-include
+
