--- a/notes/meeting_2021apr18.org
+++ b/notes/meeting_2021apr18.org
@@ -16,5 +16,5 @@ https://stackoverflow.com/questions/56393888/why-how-is-an-additional-variable-n
 ** TODO for next week, paul evans video, future of perl5 (william michels pick)
 https://ftp.osuosl.org/pub/fosdem/2021/D.perl/perl_in_2025.mp4
 
-** open issue, sub sigs with slurpies:
+** TODO open issue, sub sigs with slurpies:
 https://github.com/doomvox/raku-study/tree/main/bin/2021apr18/slurpy_list_of_int_sigs.raku
