--- a/notes/meeting_2021apr18.org
+++ b/notes/meeting_2021apr18.org
@@ -10,6 +10,8 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021apr18/
 *** ask for ideas
 *** slurpy hash signatures, calling oddity
 https://mail.google.com/mail/u/0/h/10kwmq2chxjpd/?&th=178e65b454e8d6ca&v=c&s=s
+**** known trap
+https://docs.raku.org/language/traps#Named_parameters
 *** regexes again, on stackoverflow
 https://stackoverflow.com/questions/56393888/why-how-is-an-additional-variable-needed-in-matching-repeated-arbitary-character/67078299#67078299
 
@@ -24,7 +26,11 @@ http://blogs.perl.org/users/damian_conway/2019/09/itchscratch.html
 http://rosettacode.org/wiki/Order_by_pair_comparisons#Raku 
 
 
-perl5's Log4Perl
+** perl5's Log4Perl
 https://www.perl.com/pub/2002/09/11/log4perl.html/
 https://metacpan.org/pod/Log::Log4perl
 https://metacpan.org/pod/Log::Log4perl::Appender#Parameters-passed-on-to-the-appender's-log()-method
+
+** rudeness that challenges even my standards
+
+https://r.789695.n4.nabble.com/Mixed-Beta-Disrubutions-td4715971.html#a4715983
