--- a/notes/meeting_2021apr18.org
+++ b/notes/meeting_2021apr18.org
@@ -12,7 +12,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021apr18/
 https://mail.google.com/mail/u/0/h/10kwmq2chxjpd/?&th=178e65b454e8d6ca&v=c&s=s
 **** known trap
 https://docs.raku.org/language/traps#Named_parameters
-*** regexes again, on stackoverflow
+*** TODO regexes again, on stackoverflow
 https://stackoverflow.com/questions/56393888/why-how-is-an-additional-variable-needed-in-matching-repeated-arbitary-character/67078299#67078299
 
 ** TODO for next week, paul evans video, future of perl5 (william michels pick)
