--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -2,6 +2,7 @@
 ** agenda stuff
 *** paul evans (leonerd) talk from 2020
 **** https://ftp.osuosl.org/pub/fosdem/2021/D.perl/perl_in_2025.mp4
+**** my local copy:
 /home/doom/Dust/Video/Tech/paul_evans-future_of_perl_in_2025-2021feb06.mp4
 **** my summary: making perl more raku-like in the absence of a type system
 **** 
