--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -7,6 +7,11 @@
 **** summary: ways to make perl more raku-like in the absence of a type system
 ***** match/case ideas are good
 ****** restricting to constants is un-perlish, though
+****** maybe:  
+perserve given/when, with default to "smartmatch",
+but you get match/case behavior when you specify a comparison
+
 ***** some slides: /home/doom/End/Cave/Perl6/Ore/leonerd-match_case_idea-01.png
+
 *** some silly printf experiments (perl5)
 
