--- a/notes/meeting_2021apr18.org
+++ b/notes/meeting_2021apr18.org
@@ -21,7 +21,7 @@ https://ftp.osuosl.org/pub/fosdem/2021/D.perl/perl_in_2025.mp4
 ** open issue, sub sigs with slurpies:
 https://github.com/doomvox/raku-study/tree/main/bin/2021apr18/slurpy_list_of_int_sigs.raku
 
-** TODO: what are these about
+** TODO: what are these links about
 http://blogs.perl.org/users/damian_conway/2019/09/itchscratch.html 
 http://rosettacode.org/wiki/Order_by_pair_comparisons#Raku 
 
