--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -27,6 +27,8 @@ but you get match/case behavior when you specify a comparison
 
 *** data container class
 
+*** ralph on rakuism 
+
 ** announcement
 *** for next week, could everyone install git if they haven't already?
 
