--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -32,3 +32,8 @@ but you get match/case behavior when you specify a comparison
 ** announcement
 *** for next week, could everyone install git if they haven't already?
 
+
+https://github.com/doomvox/raku-study/blob/main/notes/meeting_2021apr25.md 
+:1hour, :2min 
+
+https://github.com/rakudo/rakudo/issues/4343 
