--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -8,7 +8,7 @@ code examples:
 https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/
 
 ** agenda stuff
-*** slurpy hash named arguments
+*** slurpy hash named arguments, discussion with ralph
 https://www.nntp.perl.org/group/perl.perl6.users/2021/04/msg9883.html 
 *** paul evans (leonerd) talk from 2020
 **** https://ftp.osuosl.org/pub/fosdem/2021/D.perl/perl_in_2025.mp4
