--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -11,7 +11,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/
 *** slurpy hash named arguments, discussion with ralph
 https://www.nntp.perl.org/group/perl.perl6.users/2021/04/msg9883.html 
 
-*** paul evans (leonerd) talk from 2020
+*** paul evans (leonerd) talk from 2020 (or 2021?)
 **** https://ftp.osuosl.org/pub/fosdem/2021/D.perl/perl_in_2025.mp4
 **** my local copy:
 /home/doom/Dust/Video/Tech/paul_evans-future_of_perl_in_2025-2021feb06.mp4
