--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -25,10 +25,7 @@ but you get match/case behavior when you specify a comparison
 
 *** some silly printf experiments (perl5)
 
-                    my $rounded = sprintf("%3.2f", $cost);
-
-
-
+#  my $rounded = sprintf("%3.2f", $cost);
 
 *** raku idioms
 /home/doom/End/Cave/Ice/Xtal/Perl6/idioms.org
