--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -32,6 +32,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/line_character_cou
 /home/doom/End/Cave/Ice/Xtal/Perl6/idioms.org
 
 *** data container class
+/home/doom/End/Cave/Perl6/Wall/raku-study/bin/2021apr25/data_container_class.raku
 
 *** ralph on rakuism 
 
