--- a/notes/meeting_2021apr25.org
+++ b/notes/meeting_2021apr25.org
@@ -37,5 +37,5 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021apr25/data_container_cla
 *** for next week, could everyone install git if they haven't already?
 *** TODO bruce gray rosetta  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
 
-*** 
+*** Look at this:
 "All your idioms are belong to us" https://gfldex.wordpress.com/2021/04/16/all-your-idioms-are-belong-to-us/
