--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -1,7 +1,7 @@
 * idioms
 The word idiom is used in the docs, though not
 that frequently-- we're looking for "recommended idioms",
-cases where there are several ways of 
+cases where there are several ways of doing things in raku.
  
 ** utilpm piece from 2011
     https://perl6advent.wordpress.com/2011/12/23/day-23-idiomatic-perl-6/
