--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -1,7 +1,14 @@
 * idioms
+
+I'm looking for "recommended idioms", cases where there are
+several ways of doing things in raku but one is favored.  
+
+(The word "idiom" is used in a wider sense on occasion to just
+mean "a way to do it".)
+
+
 The word idiom is used in the docs, though not all 
-that frequently-- here I'm looking for "recommended idioms",
-cases where there are several ways of doing things in raku.
+that frequently-- 
  
 ** utilpm piece from 2011
     https://perl6advent.wordpress.com/2011/12/23/day-23-idiomatic-perl-6/
