--- a/notes/idioms.org
+++ b/notes/idioms.org
@@ -4,16 +4,16 @@ several ways of doing things in raku but one is favored.
 (The word "idiom" is used in a wider sense on occasion to just
 mean "a way to do it".)
 
-
+** from the docs
 The word idiom is used in the docs, though not all 
 that frequently-- 
  
-** utilpm piece from 2011
+*** utilpm piece from 2011
     https://perl6advent.wordpress.com/2011/12/23/day-23-idiomatic-perl-6/
 
-** some idioms from the docs
+*** some idioms from the docs
 
-*** assignment with method call
+**** assignment with method call
 #+BEGIN_SRC perl6
 class LongClassName { 
      has $.frobnicate; 
@@ -21,7 +21,7 @@ class LongClassName {
  my LongClassName $bar .= new( frobnicate => 42 ); # no need to repeat class name 
 #+END_SRC
 
-*** using signals in an event driven situation:
+**** using signals in an event driven situation:
 
 #+BEGIN_SRC perl6
 react { 
@@ -32,10 +32,10 @@ react {
  } 
 #+END_SRC
 
-*** stringifying match object 
+**** stringifying match object 
  $/.Str should also work, ~$/ is currently the more common idiom.
 
-*** call named params in colon-style similar to declaration
+**** call named params in colon-style similar to declaration
 #+BEGIN_SRC perl6
 sub speak(:$word, :$times) {
   say $word for ^$times
@@ -47,7 +47,7 @@ speak(:word(hi), :times(2));      # Maybe *more* idiomatic? (if it works)
 
 #+END_SRC
 
-*** usually drop optional parens 
+**** usually drop optional parens 
 #+BEGIN_SRC perl6
  if ($a < 0) { ... }         # Perl 6 
  if $a < 0 { ... }           # Perl 6, more idiomatic 
@@ -59,13 +59,13 @@ speak(:word(hi), :times(2));      # Maybe *more* idiomatic? (if it works)
 #+END_SRC
 
 
-*** raku "or die" used much like perl
+**** raku "or die" used much like perl
 #+BEGIN_SRC raku
 mkdir "newdir" or die "$!";   ## but now it dies anyway, so...
 rmdir "newdir" or die "$!"; 
 #+END_SRC
 
-*** given/when
+**** given/when
 given sets $_ inside the following block. 
 The keywords for individual cases are when and default. 
 
@@ -78,7 +78,7 @@ given $var {
 }
 #+END_SRC
 
-*** looping over keys and values of a hash
+**** looping over keys and values of a hash
 
 #+BEGIN_SRC perl6
 my %vowels = 'a' => 1, 'e' => 2, 'i' => 3, 'o' => 4, 'u' => 5;
@@ -87,7 +87,7 @@ for %vowels.kv -> $vowel, $index {
 }
 #+END_SRC
 
-*** use LEAVE phaser for closing the handles 
+**** use LEAVE phaser for closing the handles 
 works regardless of how the block is left.
 #+BEGIN_SRC perl6
 if $do-stuff-with-the-file { 
@@ -97,7 +97,7 @@ if $do-stuff-with-the-file {
  } 
 #+END_SRC
 
-*** the smartmatch operator ~~ rather than does
+**** the smartmatch operator ~~ rather than does
 #+BEGIN_SRC perl6
 my $d = Date.new('2016-06-03');
 say $d.does(Dateish);       # True    (Date does role Dateish) 
