--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -6,6 +6,13 @@ code examples:
 https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 
 ** agenda stuff
+
+*** typology: what is accepted by what 
+**** is anything ever cast automatically
+
+
+
+
 *** slurpy hash named arguments, discussion with ralph
 https://www.nntp.perl.org/group/perl.perl6.users/2021/04/msg9883.html 
 
