--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -7,8 +7,13 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 
 ** agenda stuff
 
+*** 69cent tour of git and github
+
 *** typology: what is accepted by what 
 **** is anything ever cast automatically
+
+*** raku classes as data containers
+
 
 
 
