--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -7,7 +7,7 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 
 ** agenda stuff
 *** 69 cent tour of git and github
-*** bruce gray rosetta  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
+*** bruce gray rosetta code entry:  https://rosettacode.org/wiki/Tree_from_nesting_levels#Raku 
 *** typology: what is accepted by what 
 **** is anything ever cast automatically
 *** raku classes as data containers
