--- a/notes/meeting_2021may02.org
+++ b/notes/meeting_2021may02.org
@@ -19,5 +19,5 @@ https://github.com/doomvox/raku-study/tree/main/bin/2021may02/
 ***** https://gfldex.wordpress.com/2021/04/16/all-your-idioms-are-belong-to-us/
 ***** maybe: favor methods over functions?
 
-** announcement
-
+** announcements
+*** ?
