--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -30,6 +30,12 @@ cd /tmp/dev
 #+BEGIN_SRC perl6
 git clone git@github.com:doomvox/raku-study.git
 #+END_SRC
+**** do some things with this
+#+BEGIN_SRC perl6
+cd /tmp/dev/raku-study/bin/2021may02
+echo "say 'hello';" > hello.raku
+raku hello.raku
+git status
 
 
 *** initialize a new git repo
