--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -40,6 +40,7 @@ git commit -m'created demo script hello.raku'
 
 git log --oneline | egrep 'created demo'
 
+#+END_SRC
 
 *** initialize a new git repo
 ****  working standalone
