--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -22,16 +22,16 @@ git@github.com:doomvox/raku-study.git
 #+END_SRC
 
 **** create a location to work, e.g.:
-#+BEGIN_SRC perl6
+#+BEGIN_SRC sh
 mkdir /tmp/dev
 cd /tmp/dev
 #+END_SRC
 **** use git get a local copy of raku-study repository
-#+BEGIN_SRC perl6
+#+BEGIN_SRC sh
 git clone git@github.com:doomvox/raku-study.git
 #+END_SRC
 **** do some things with this
-#+BEGIN_SRC perl6
+#+BEGIN_SRC sh
 cd /tmp/dev/raku-study/bin/2021may02
 echo "say 'hello';" > hello.raku
 raku hello.raku
