--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -37,8 +37,9 @@ echo "say 'hello';" > hello.raku
 raku hello.raku
 git status
 git commit -m'created demo script hello.raku'
-
+git log -n 3
 git log --oneline | egrep 'created demo'
+
 #+END_SRC
 
 *** initialize a new git repo
