--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -40,7 +40,7 @@ git commit -m'created demo script hello.raku'
 git log -n 3
 git log -n 3 --oneline
 git log --oneline | egrep 'created demo'
-echo "say 'goodbye;" >> hello.raku
+echo "say 'goodbye';" >> hello.raku
 git status
 
 #+END_SRC
