--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -43,6 +43,8 @@ git log --oneline | egrep 'created demo'
 echo "say 'goodbye';" >> hello.raku
 git status
 git diff
+git commit -m 'added goodbye line to hello.raku'
+git commit -a -m 'added goodbye line to hello.raku'
 
 #+END_SRC
 
