--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -45,7 +45,8 @@ git status
 git diff
 git commit -m 'added goodbye line to hello.raku'
 git commit -a -m 'added goodbye line to hello.raku'
-
+git log -3
+git diff <commit1> <commit2>
 #+END_SRC
 
 *** initialize a new git repo
