--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -44,6 +44,7 @@ git log --oneline | egrep 'created demo'
 
 
 **** edit the file, check diff, commit
+#+BEGIN_SRC sh
 echo "say 'goodbye';" >> hello.raku
 git status
 git diff
