--- a/notes/69cent_tour_git.org
+++ b/notes/69cent_tour_git.org
@@ -66,6 +66,7 @@ git push
 
 *** new topic: create a new git repo
 ****  working standalone
+***** cd <where_ever>
 ***** git init
 ***** git add
 ***** git status
